@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.2-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-02 08:14:09, took 00:11:13, with 50 workers, on 617 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-11-02 08:53:37, took 00:09:39, with 50 workers, on 617 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
