@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.2-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-02 08:14:09, took 00:11:13, with 50 workers, on 617 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-11-02 08:53:37, took 00:09:39, with 50 workers, on 617 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
