@@ -16256,3 +16256,6 @@ qc pass: dhcp with excluded address
 ---------------------------------- 2024-11-02 07:44:58 24.11.2
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-11-02 08:29:06 24.11.2
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
